# allegro_place_to_xlsx

./: Cargo.toml  README.md  build.rs  place_txt.txt  place_txt.xlsx
src/: main.rs
